# AzomBot

./: .env.example  .gitignore  WORKFLOWS.md  coding-guidelines.md  replacements.txt
azom_ai_agent/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh
azom_ai_agent/app/: __init__.py  config.py  exceptions.py  logger.py  main.py  middleware.py  prompt_utils.py
azom_ai_agent/app/api/: README.md
azom_ai_agent/app/core/: feature_flags.py  modes.py
azom_ai_agent/app/middlewares/: README.md  __init__.py  mode.py  rate_limiter.py  request_logging.py
azom_ai_agent/app/models/: README.md  __init__.py  chat_models.py  requests.py  responses.py
azom_ai_agent/app/pipelineserver/: AZOM Pipeline Server - Komplett Implementation.md  README.md  __init__.py  pytest.ini
azom_ai_agent/app/services/: README.md  ai_service.py  dynamic_knowledge_service.py  groq_service.py  knowledge_service.py  llm_service.py  protocols.py  scheduled_update_service.py  test_llm_service.py
azom_ai_agent/app/toolserver/: endpoints.py  main.py  tool_logic.py
azom_ai_agent/data/prompts/: azom_iexpertpro_v3.md  azom_memoryinject_v1.md  azom_safetyfilter_v1.md  azom_systemprompt_v1.md
azom_ai_agent/docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
azom_ai_agent/docs/: SystemSpecification.md
azom_ai_agent/frontend/: README.md  index.html  tailwind.config.cjs  vite.config.ts
azom_ai_agent/frontend/src/: App.tsx  index.css  main.tsx
azom_ai_agent/scripts/: deploy.sh  migrate_data.py  security_scan.py  setup.sh
azom_ai_agent/tests/: test_api.py  test_logger_util.py  test_logging_and_errors.py  test_prompt_utils.py  test_protocols.py  test_rate_limiter.py  test_request_logging.py  test_runtime_config_openai.py  test_services.py
azom_ai_agent/tests/api/: test_chat_endpoint.py
azom_ai_agent/tests/core/: test_feature_flags.py
azom_ai_agent/tests/pipelineserver/: test_chat_mode_caps.py  test_chat_mode_caps_extra.py  test_cors_config.py  test_mode_header_echo_pipeline.py
azom_ai_agent/tests/services/: test_ai_service.py  test_ai_service_light_mode.py  test_groq_service.py  test_knowledge_service.py  test_llm_client_factory_openai.py  (+7 more)
(+91 files in other folders)
